<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android GCS</string>
    
     <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="local_service_started">Local service has started</string>
    <string name="local_service_label">Android GCS</string>
	<string name="LogPath">/Arduplane</string>
	<string name="connected">Connected</string>
	<string name="linked">Active Link</string>
	<string name="protocolSelected">Protocol Set</string>
	<string name="deviceAvailable">Bridge not Available</string>
	<string name="protocolError">No Protocol</string>
	<string name="mavlinkError">Disconnected from UAV</string>
	<string name="heartbeat">Heartbeat</string>
	<string name="enableFollowMe">Enable Follow Mode</string>
	<string name="disableFollowMe">Disable Follow Mode</string>
	<string name="enableLoiterSet">Enable Goto Mode</string>
	<string name="disableLoiterSet">Disable Goto Mode</string>
	<string name="enableWPDrag">Enable WP Drag</string>
	<string name="disableWPDrag">Disable WP Drag</string>
	<string name="checkForUpdates">http://usubscription.com/copterGCS.php</string>
	<string name="speakWaypointReached">Speak Waypoint Reached</string>
	<string name="speakModeChange">Speak Mode Change</string>
	<string name="speakConnectionStatus">Speak Connection Status</string>
	<string name="speakLowBattery">Speak Low Battery Warning</string>
	<string name="speakWaypointNext">Speak Next Waypoint</string>
	<string name="gpsOnMission">Keep GPS On in Mission Planner</string>
	<string name="keepScreenOn">Keep Screen Awake</string>
	<string name="telemetryProtocol">Telemetry Protocol</string>
	<string name="linkType">Link Type</string>
	<string name="orientation">Orientation</string>
	<string name="kmlLog">Log to KML File</string>
	<string name="tlog">Log to tlog File</string>
	<string name="speakStatusMessage">Speak UAV Status Messages</string>
	
     <string-array name="mode_array">
        <item>Manual</item>  				<!-- 0 -->    
        <item>Circle</item>  				<!-- 1 --> 
        <item>Stabilize</item>  			<!-- 2 --> 
        <item>Training</item>   			<!-- 3 -->      
      	<item>Empty</item> 					
        <item>Fly by Wire A</item>  		<!-- 5 --> 
        <item>Fly by Wire B</item>  		<!-- 6 --> 
      	<item>Empty</item>	
      	<item>Empty</item>		
      	<item>Empty</item>		
        <item>Auto</item>  					<!-- 10 --> 
        <item>Return to Launch</item>  		<!-- 11 --> 
        <item>Loiter</item>  				<!-- 12 --> 
        <item>Guided</item>  				<!-- 13 --> 
    </string-array>

    <string-array name="paramsWP_waypoint">
        <item>Lat</item>
        <item>Lon</item>
        <item>Pause</item>
        <item>4</item>
    </string-array>
    
    <string-array name="mode_array_copter">
        <item>Stabilize</item> 				<!-- 0 -->      
        <item>Acro</item>  					<!-- 1 --> 
        <item>Alt Hold</item>  				<!-- 2 --> 
        <item>Auto</item>        			<!-- 3 --> 
        <item>Guided</item>  				<!-- 4 --> 
        <item>Loiter</item>  				<!-- 5 --> 
        <item>Return to Launch</item>  		<!-- 6 --> 
        <item>Circle</item>  				<!-- 7 --> 
        <item>Position</item>  				<!-- 8 --> 
        <item>Land</item>  					<!-- 9 --> 
        <item>O.F. Loiter</item>  			<!-- 10 --> 
        <item>Toy Auto</item>  				<!-- 11 --> 
        <item>Toy Manual</item>  			<!-- 12 --> 
    </string-array>
    
    <string-array name="battery_modes">
        <item>Disabled</item>      
        <item>3 Cell</item>
        <item>4 Cell</item>
        <item>Battery Volts</item>
        <item>Volts and Current</item>        
    </string-array>
    
    
</resources>
