<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF808080"
        android:text="Speech Options"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speakModeChange" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speakWaypointReached" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speakConnectionStatus" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speakLowBattery" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speakWaypointNext" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speakStatusMessage" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Power Options"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:background="#FF808080"
        />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gpsOnMission" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keepScreenOn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Communication Options"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="#FF808080"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
		<Button
        	android:id="@+id/button1"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="Clear" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clear Bluetooth Settings"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log Options"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:background="#FF808080"
        />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kmlLog"/>
    
    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tlog"/>
<!-- 
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" >
        <TextView
        	android:id="@+id/textView3"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="Protocol:"
        	android:textAppearance="?android:attr/textAppearanceMedium" />
        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Mavlink"/>
        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Arducopter1"/>
	</RadioGroup>
	-->
</LinearLayout>
</ScrollView>